<resources>
    <string name="pay_id_mask">%1$s$atalamirror.io</string>
    <string name="error_connection_timeout">Timeout error, Please try again. If the error persists contact support.</string>
    <string name="app_name">Atala PRISM</string>
    <string name="scan_qr">Scan QR code</string>
    <string name="connection_label">Connect to an organization to receive your credentials</string>
    <string name="connection_secondary_label">Receive, store and share your digital credentials</string>
    <string name="missing_data_default_text">--</string>
    <string name="available_soon">Available soon</string>
    <string name="your_credentials_were">Your credentials were</string>
    <string name="date_text_view_second_ago_text">%1$d second ago</string>
    <string name="date_text_view_seconds_ago_text">%1$d seconds ago</string>
    <string name="date_text_view_minute_ago_text">%1$d minute ago</string>
    <string name="date_text_view_minutes_ago_text">%1$d minutes ago</string>
    <string name="date_text_view_hour_ago_text">%1$d hour ago</string>
    <string name="date_text_view_hours_ago_text">%1$d hours ago</string>
    <string name="error_popup_accept">Accept</string>
    <string name="dialog_success_ok_button">OK</string>
    <string name="generic_error_message">Something went wrong</string>
    <string name="commons_error_decoding_a_image_file">Something went wrong decoding the image file</string>
    <string name="connections_activity_title">Connections</string>
    <string name="terms_and_conditions_activity_title">Terms &amp; Conditions</string>
    <string name="wallet_setup_activity_title">Your Recovery Phrase</string>
    <string name="seed_phrase_verification_activity_title">Verify Recovery Phrase</string>
    <string name="qr_scanner_activity_title">Scan QR</string>
    <string name="credential_government_type_title">\n• ID Credential </string>
    <string name="credential_degree_type_title">\n• University Credential </string>
    <string name="credential_employed_type_title">\n• Employment Credential </string>
    <string name="credential_insurance_type_title">\n• Insurance Credential </string>
    <string name="credential_georgia_educational_degree_type_title">\n• Educational Degree</string>
    <string name="credential_georgia_educational_degree_transcript_type_title">\n• Educational Degree Transcript</string>
    <string name="credential_georgia_national_id_type_title">\n• National ID</string>
    <string name="credential_kyc_type_title">\n• KYC Credential</string>
    <string name="account_creation">Account Creation</string>
    <string name="terms_and_conditions_description">Please indicate that you have read and agreed to the Terms and Conditions and the Privacy Policy Agreement</string>
    <string name="privacy_policies_agreement">Privacy Policy Agreement</string>
    <string name="about_title">About us</string>
    <string name="about_version">Atala PRISM version </string>
    <string name="about_version_number">129.1</string>
    <string name="about_version_server">Testing</string>
    <string name="about_terms_title">Terms &amp; Conditions</string>
    <string name="about_terms_date">Last Updated: May 20, 2019</string>
    <string name="about_policy_title">Privacy Policy</string>
    <string name="about_policy_date">Last Updated: May 20, 2019</string>
    <string name="about_built">Atala PRISM powered by Cardano</string>
    <string name="about_year">© 2020 IOHK</string>
    <string name="seed_phrase_description">Your Recovery Phrase is used to generate and recover your account</string>
    <string name="seed_phrase_explanation">Please save these 12 words on a piece of paper. The order is important. This phrase will allow you to recover your account</string>
    <string name="seed_phrase_acceptance">I understand that if I lose my recovery phrase, I will not be able to recover my account</string>
    <string name="seed_phrase_verification_description">Enter the following words to verify your Seed Phrase</string>
    <string name="word_numeric">Word #%1$d</string>
    <string name="credential_degree_name">University Degree</string>
    <string name="credential_government_name">Government ID</string>
    <string name="credential_employment_name">Proof of Employment</string>
    <string name="credential_insurance_name">Health Insurance</string>
    <string name="credential_georgia_educational_degree_name">Educational Degree</string>
    <string name="credential_georgia_educational_degree_transcript_name">Educational Degree Transcript</string>
    <string name="credential_georgia_national_id_name">National ID</string>
    <string name="credential_kyc">KYC Credential</string>
    <string name="credential_unknown">Unknown credential</string>
    <string name="degree_name">Degree Name</string>
    <string name="bachelors_in_engineering">Bachelor\'s in Engineering</string>
    <string name="university_name">University Name</string>
    <string name="free_university_Tbilisi">Free University Tbilisi</string>
    <string name="some_date">10/2/2019</string>
    <string name="graduation_date">Graduation Date</string>
    <string name="start_date">Start Date</string>
    <string name="employment_start_date">Employment Start Date</string>
    <string name="insurance_end_date">Policy End Date</string>
    <string name="insurance_number">Policy Number</string>
    <string name="insurance_class">Class of Insurance</string>
    <string name="full_name">Full Name</string>
    <string name="award_name">Award</string>
    <string name="some_name">Gergi Beridze</string>
    <string name="some_award">First Class Honours</string>
    <string name="award">Award</string>
    <string name="national_card">National ID Card</string>
    <string name="university_degree">University Degree</string>
    <string name="issuance_date">Issuance Date</string>
    <string name="company_name">Company Name</string>
    <string name="employment_status">Employment Status</string>
    <string name="provider_name">Provider Name</string>
    <string name="decline">Decline</string>
    <string name="confirm">Confirm</string>
    <string name="share_information_credential">Share the following information to process your credential</string>
    <string name="payment_activity_title">Payment</string>
    <string name="image_description">Image description</string>
    <string name="permission_denied_message">You have to grant camera permission to continue</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="empty_title" />
    <string name="tutorial_step_1_slogan_1">Own and share your data</string>
    <string name="tutorial_step_1_slogan_2">Store all your important documents in one place and share in easy, secure and private way</string>
    <string name="tutorial_step_2_slogan_1">Take control of your personal information</string>
    <string name="tutorial_step_2_slogan_2">Secure your personal information and only share what you need to</string>
    <string name="tutorial_step_3_slogan_1">Get instant access to services</string>
    <string name="tutorial_step_3_slogan_2">Prove your identity in one click and instantly access services everywhere Atala PRISM is supported</string>
    <string name="accept">Accept</string>
    <string name="verify">Verify</string>
    <string name="continue_string">Continue</string>
    <string name="create_account">Create Account</string>
    <string name="restore_account">Restore Account</string>
    <string name="more_info">More info</string>
    <string name="universities">Universities</string>
    <string name="employers">Employers</string>
    <string name="home_title">Credentials</string>
    <string name="view">View</string>
    <string name="new_credentials_section_title">You have new credential(s)</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="wallet">Wallet</string>
    <string name="home">Credentials</string>
    <string name="services">Services</string>
    <string name="profile">Profile</string>
    <string name="connections">Connections</string>
    <string name="contacts">Contacts</string>
    <string name="notifications">Notifications</string>
    <string name="backup_button_name">Backup Account</string>
    <string name="backup_button_description">Create a backup now</string>
    <string name="security_button_name">Security</string>
    <string name="security_button_description">Secure app with a Pin or Biometrics</string>
    <string name="pin_code_button_name">PIN Code</string>
    <string name="pin_code_button_description">Change the code to unlock this app</string>
    <string name="support_button_name">Support</string>
    <string name="support_button_description">Get in touch with us</string>
    <string name="about_button_name">About</string>
    <string name="about_button_description">Legal and version information</string>
    <string name="support_title">Support</string>
    <string name="custom_date_button_name">Date</string>
    <string name="custom_date_button_description">Custom date format</string>
    <string name="pay_id_button_name">Pay ID</string>
    <string name="pay_id_button_description">View or Create Pay ID</string>
    <string name="delete_contacts_credentials"><![CDATA[Delete contacts & credentials]]></string>
    <string name="reset">Reset</string>
    <string name="received">Received: %1$s</string>
    <string name="received_second_ago">Received: %1$d second ago</string>
    <string name="received_seconds_ago">Received: %1$d seconds ago</string>
    <string name="received_minute_ago">Received: %1$d minute ago</string>
    <string name="received_minutes_ago">Received: %1$d minutes ago</string>
    <string name="received_hour_ago">Received: %1$d hour ago</string>
    <string name="received_hours_ago">Received: %1$d hours ago</string>
    <string name="fragment_interactive_demo_step2_title">Connect with an \nOrganization</string>
    <string name="fragment_interactive_demo_step2_text">To obtain your Government ID, follow the steps below:</string>
    <string name="fragment_interactive_demo_step2_instruction_1_number">01.</string>
    <string name="fragment_interactive_demo_step2_instruction_1_text">Open Atala PRISM on your phone.</string>
    <string name="fragment_interactive_demo_step2_instruction_2_number">02.</string>
    <string name="fragment_interactive_demo_step2_instruction_2_text">Go to the Notifications Menu \nIcon menu and tap the Scan QR code button.</string>
    <string name="fragment_interactive_demo_step2_instruction_3_number">03.</string>
    <string name="fragment_interactive_demo_step2_instruction_3_text">Scan the QR code.</string>
    <string name="fragment_pay_id_select_identity_credential_next">Next</string>
    <string name="fragment_pay_id_setup_form_pay_id_name_label">ENTER PAY ID NAME</string>
    <string name="fragment_pay_id_setup_form_pay_id_name_extension">$atalamirror.io</string>
    <string name="fragment_pay_id_setup_form_pay_id_name_rule">* Maximum length 50 characters</string>
    <string name="fragment_pay_id_setup_form_pay_id_wallet_instructions">Link your Pay ID to a Wallet or \nSpecific Address</string>
    <string name="fragment_pay_id_setup_form_pay_id_wallet_label">ADD OR SCAN</string>
    <string name="fragment_pay_id_setup_form_pay_id_wallet_rule">* Scan the extended public key from your wallet. \nAll the addresses in your wallet will be added</string>
    <string name="dialog_fragment_new_address_form_title">Add New Address</string>
    <string name="dialog_fragment_new_address_form_address_label">Add or scan address</string>
    <string name="dialog_fragment_new_address_form_address_help_text">* Scan QR code of an address \n* Paste an address \n* Scan the extended public key from your wallet. All the addresses in your wallet will be added.</string>
    <string name="dialog_fragment_new_address_form_add_button_text">Add</string>
</resources>