<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_settings"
        android:paddingTop="25dp"
        android:paddingBottom="20dp">

        <io.iohk.atala.prism.app.views.utils.components.OptionItem
            android:id="@+id/backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:actionImage="@drawable/arrow_right_grey"
            app:logoImage="@drawable/ic_backup"
            app:primaryText="@string/backup_button_name"
            app:secondaryText="@string/backup_button_description" />

        <io.iohk.atala.prism.app.views.utils.components.OptionItem
            android:id="@+id/delete_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:actionImage="@drawable/arrow_right_grey"
            app:isAvailable="true"
            app:logoImage="@drawable/ic_reset"
            app:primaryText="@string/reset"
            app:secondaryText="@string/delete_contacts_credentials" />

        <io.iohk.atala.prism.app.views.utils.components.OptionItem
            android:id="@+id/security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:actionImage="@drawable/arrow_right_grey"
            app:isAvailable="true"
            app:logoImage="@drawable/ic_security"
            app:primaryText="@string/security_button_name"
            app:secondaryText="@string/security_button_description" />

        <io.iohk.atala.prism.app.views.utils.components.OptionItem
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:isAvailable="true"
            app:actionImage="@drawable/arrow_right_grey"
            app:logoImage="@drawable/ic_support"
            app:primaryText="@string/support_button_name"
            app:secondaryText="@string/support_button_description" />

        <io.iohk.atala.prism.app.views.utils.components.OptionItem
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:isAvailable="true"
            app:actionImage="@drawable/arrow_right_grey"
            app:logoImage="@drawable/ic_about"
            app:primaryText="@string/about_button_name"
            app:secondaryText="@string/about_button_description" />

        <io.iohk.atala.prism.app.views.utils.components.OptionItem
            android:id="@+id/custom_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:actionImage="@drawable/arrow_right_grey"
            app:isAvailable="true"
            app:logoImage="@drawable/ic_custom_date"
            app:primaryText="@string/custom_date_button_name"
            app:secondaryText="@string/custom_date_button_description" />

        <io.iohk.atala.prism.app.views.utils.components.OptionItem
            android:id="@+id/backend_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:actionImage="@drawable/arrow_right_grey"
            app:isAvailable="true"
            app:logoImage="@drawable/ic_about"
            app:primaryText="Backend config"
            app:secondaryText="Set api url and port" />
    </LinearLayout>
</ScrollView>