<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="history"
            type="io.iohk.atala.prism.app.data.local.db.model.ActivityHistoryWithCredential" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="8dp"
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_spacing">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/credential_logo_image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_conection_list"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/internal_margin"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/credential_type_text_view"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_2"
                        android:text="University Degree"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/credential_name_text_view"
                        android:textSize="13sp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="University of Innovation and Technology" />
                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@color/grey_2" />

            <io.iohk.atala.prism.android.customui.DateTextView
                app:dateFormatWrapperText="@string/received"
                app:secondAgoText="@string/received_second_ago"
                app:secondsAgoText="@string/received_seconds_ago"
                app:minuteAgoText="@string/received_minute_ago"
                app:minutesAgoText="@string/received_minutes_ago"
                app:hourAgoText="@string/received_hour_ago"
                app:hoursAgoText="@string/received_hours_ago"
                android:id="@+id/issued_date_text_view"
                android:maxLines="1"
                android:textSize="14sp"
                android:ellipsize="end"
                android:text="Received 06-07-2020 11:05am"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>