<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:textAlignment="center"
            android:layout_marginHorizontal="38dp"
            android:textColor="@color/black"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            android:textSize="22sp"
            android:maxLines="2"
            android:layout_gravity="center"
            android:text="@string/fragment_interactive_demo_step2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="38dp"
            android:textColor="@color/grey_4"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeTextType="uniform"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:text="@string/fragment_interactive_demo_step2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginTop="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/interactive_demo_step_2_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:text="@string/fragment_interactive_demo_step2_instruction_1_number"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/grey_4"
                android:text="@string/fragment_interactive_demo_step2_instruction_1_text"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:text="@string/fragment_interactive_demo_step2_instruction_2_number"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/grey_4"
                android:text="@string/fragment_interactive_demo_step2_instruction_2_text"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:text="@string/fragment_interactive_demo_step2_instruction_3_number"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/grey_4"
                android:text="@string/fragment_interactive_demo_step2_instruction_3_text"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>