<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:iohk="http://schemas.android.com/tools">
    <data>
        <import type="io.iohk.atala.prism.app.ui.payid.step2.PayIdSetupFormViewModel"/>
        <variable
            name="viewModel"
            type="io.iohk.atala.prism.app.ui.payid.step2.PayIdSetupFormViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:paddingTop="40dp"
                android:paddingBottom="100dp"
                android:paddingHorizontal="30dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/fragment_pay_id_setup_form_pay_id_name_rule"
                    app:suffixText="@string/fragment_pay_id_setup_form_pay_id_name_extension"
                    android:hint="@string/fragment_pay_id_setup_form_pay_id_name_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:digits="@string/pay_id_name_valid_digits"
                        android:inputType="textFilter"
                        android:enabled="@{!viewModel.payIdNameIsRegistered}"
                        android:text="@={viewModel.payIdName}"
                        android:maxLength="@{PayIdSetupFormViewModel.MAX_PAY_ID_NAME_LENGTH}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    iohk:visible="@{viewModel.payIdNameIsRegistered}"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/fragment_pay_id_setup_form_pay_id_wallet_instructions"
                    android:layout_marginTop="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    iohk:visible="@{viewModel.payIdNameIsRegistered}"
                    android:id="@+id/wallet_public_key_text_input"
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_qr_small"
                    app:helperText="@string/fragment_pay_id_setup_form_pay_id_wallet_rule"
                    android:hint="@string/fragment_pay_id_setup_form_pay_id_wallet_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.walletPublicKey}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:enabled="@{viewModel.canContinue}"
            android:onClick="@{ v -> viewModel.next()}"
            app:cornerRadius="50dp"
            android:text="@string/fragment_pay_id_select_identity_credential_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="56dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>